crates/jarl-core/src/lints/testthat/expect_length/snapshots/jarl_core__lints__testthat__expect_length__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/testthat/expect_length/mod.rs
expression: "get_fixed_text(vec![\"expect_equal(length(x), 2L)\",\n\"expect_equal(length(x), foo(y))\", \"expect_equal(foo(y), length(x))\",\n\"testthat::expect_equal(base::length(x), 2)\",], \"expect_length\", None,)"
---
OLD:
====
expect_equal(length(x), 2L)
NEW:
====
expect_length(x, 2L)

OLD:
====
expect_equal(length(x), foo(y))
NEW:
====
expect_length(x, foo(y))

OLD:
====
expect_equal(foo(y), length(x))
NEW:
====
expect_length(x, foo(y))

OLD:
====
testthat::expect_equal(base::length(x), 2)
NEW:
====
testthat::expect_length(x, 2)
